--- a/pages/code/asdocs/all-index-W.html
+++ b/pages/code/asdocs/all-index-W.html
@@ -51,7 +51,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("WÂ
 </tr>
 <tr>
 <td width="20"></td><td>
-     Log a message with 'debug' priority.</td>
+     Log a message with 'warning' priority.</td>
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/Log.html#WARNING">WARNING</a> &mdash; Constant static property in class com.threerings.util.<a onclick="javascript:loadClassListFrame('com/threerings/util/class-list.html');" href="com/threerings/util/Log.html">Log</a></td>
