--- a/pages/code/contrib/asdocs/all-classes.html
+++ b/pages/code/contrib/asdocs/all-classes.html
@@ -382,6 +382,12 @@
 <td><a href="com/whirled/contrib/simplegame/net/OfflineTickedMessageManager.html">OfflineTickedMessageManager</a></td>
 </tr>
 <tr>
+<td><a href="com/whirled/contrib/avrg/oneroom/OneRoomGameRoom.html">OneRoomGameRoom</a></td>
+</tr>
+<tr>
+<td><a href="com/whirled/contrib/avrg/oneroom/OneRoomGameServer.html">OneRoomGameServer</a></td>
+</tr>
+<tr>
 <td><a href="com/whirled/contrib/simplegame/net/OnlineTickedMessageManager.html">OnlineTickedMessageManager</a></td>
 </tr>
 <tr>
