--- a/pages/code/contrib/asdocs/all-index-F.html
+++ b/pages/code/contrib/asdocs/all-index-F.html
@@ -207,6 +207,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("FÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/oneroom/class-list.html');" href="com/whirled/contrib/avrg/oneroom/OneRoomGameRoom.html#finishInit()">finishInit</a>() &mdash; Method in class com.whirled.contrib.avrg.oneroom.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/oneroom/class-list.html');" href="com/whirled/contrib/avrg/oneroom/OneRoomGameRoom.html">OneRoomGameRoom</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+     Called once the room is initialized.</td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/Board.html#flipPiece()">flipPiece</a>(name, tree) &mdash; Method in class com.whirled.contrib.platformer.board.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/Board.html">Board</a></td>
 </tr>
 <tr>
@@ -261,7 +268,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("FÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/FlyTask.html#FlyTask()">FlyTask</a>(ac:<a href="com/whirled/contrib/platformer/game/ActorController.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game./class-list.html');">com.whirled.contrib.platformer.game:ActorController</a>, col:<a href="com/whirled/contrib/platformer/board/Collider.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board./class-list.html');">com.whirled.contrib.platformer.board:Collider</a>) &mdash; Constructor in class com.whirled.contrib.platformer.board.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/FlyTask.html">FlyTask</a></td>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/FlyTask.html#FlyTask()">FlyTask</a>(ac:<a href="com/whirled/contrib/platformer/game/ActorController.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game./class-list.html');">com.whirled.contrib.platformer.game:ActorController</a>, col:<a href="com/whirled/contrib/platformer/board/Collider.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board./class-list.html');">com.whirled.contrib.platformer.board:Collider</a>, maxDx, maxDy) &mdash; Constructor in class com.whirled.contrib.platformer.board.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/FlyTask.html">FlyTask</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
