--- a/pages/code/contrib/asdocs/all-index-I.html
+++ b/pages/code/contrib/asdocs/all-index-I.html
@@ -176,6 +176,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("IÂ
      Call init after the WhirledGameControl is connected and the level packs are available.</td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/oneroom/class-list.html');" href="com/whirled/contrib/avrg/oneroom/OneRoomGameRoom.html#init()">init</a>(server:<a href="com/whirled/contrib/avrg/oneroom/OneRoomGameServer.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/oneroom./class-list.html');">com.whirled.contrib.avrg.oneroom:OneRoomGameServer</a>, roomId) &mdash; Method in class com.whirled.contrib.avrg.oneroom.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/oneroom/class-list.html');" href="com/whirled/contrib/avrg/oneroom/OneRoomGameRoom.html">OneRoomGameRoom</a></td>
+</tr>
+<tr>
+<td width="20"></td><td> 
+     Intializes the game room.</td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/ColliderTask.html#init()">init</a>(delta) &mdash; Method in class com.whirled.contrib.platformer.board.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/ColliderTask.html">ColliderTask</a></td>
 </tr>
 <tr>
