--- a/pages/code/contrib/asdocs/all-index-M.html
+++ b/pages/code/contrib/asdocs/all-index-M.html
@@ -175,25 +175,25 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("MÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/FlyTask.html#_maxDx">_maxDx</a> &mdash; Property in class com.whirled.contrib.platformer.board.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/FlyTask.html">FlyTask</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/Collider.html#MAX_DX">MAX_DX</a> &mdash; Constant static property in class com.whirled.contrib.platformer.board.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/Collider.html">Collider</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
 </tr>
 <tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/FlyTask.html#MAX_DX">MAX_DX</a> &mdash; Property in class com.whirled.contrib.platformer.board.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/FlyTask.html">FlyTask</a></td>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/FlyTask.html#_maxDy">_maxDy</a> &mdash; Property in class com.whirled.contrib.platformer.board.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/FlyTask.html">FlyTask</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/Collider.html#MAX_DY">MAX_DY</a> &mdash; Constant static property in class com.whirled.contrib.platformer.board.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/Collider.html">Collider</a></td>
-</tr>
-<tr>
-<td width="20"></td><td></td>
-</tr>
-<tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/FlyTask.html#MAX_DY">MAX_DY</a> &mdash; Property in class com.whirled.contrib.platformer.board.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/FlyTask.html">FlyTask</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
@@ -365,6 +365,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("MÂ
 </tr>
 <tr>
 <td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/oneroom/class-list.html');" href="com/whirled/contrib/avrg/oneroom/OneRoomGameRoom.html#messageReceived()">messageReceived</a>(senderId, name, value) &mdash; Method in class com.whirled.contrib.avrg.oneroom.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/oneroom/class-list.html');" href="com/whirled/contrib/avrg/oneroom/OneRoomGameRoom.html">OneRoomGameRoom</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+     Called whan a game player in this room sends a message to the server agent.</td>
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/display/class-list.html');" href="com/whirled/contrib/display/ClickAnimateFurniture.html#messageReceived()">messageReceived</a>(event) &mdash; Method in class com.whirled.contrib.display.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/display/class-list.html');" href="com/whirled/contrib/display/ClickAnimateFurniture.html">ClickAnimateFurniture</a></td>
