--- a/pages/code/contrib/asdocs/class-summary.html
+++ b/pages/code/contrib/asdocs/class-summary.html
@@ -691,6 +691,18 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Al
 </td><td class="summaryTableCol"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/net/class-list.html');" href="com/whirled/contrib/simplegame/net/package-detail.html">com.whirled.contrib.simplegame.net</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
 <tr class="prow0">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="com/whirled/contrib/avrg/oneroom/OneRoomGameRoom.html">OneRoomGameRoom</a>
+<br>
+</td><td class="summaryTableCol"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/oneroom/class-list.html');" href="com/whirled/contrib/avrg/oneroom/package-detail.html">com.whirled.contrib.avrg.oneroom</a></td><td class="summaryTableLastCol">
+ Room type superclass for games that take place in exactly one room.</td>
+</tr>
+<tr class="prow1">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="com/whirled/contrib/avrg/oneroom/OneRoomGameServer.html">OneRoomGameServer</a>
+<br>
+</td><td class="summaryTableCol"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/oneroom/class-list.html');" href="com/whirled/contrib/avrg/oneroom/package-detail.html">com.whirled.contrib.avrg.oneroom</a></td><td class="summaryTableLastCol">
+ Server agent for games that take place in exactly one room.</td>
+</tr>
+<tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="com/whirled/contrib/simplegame/net/OnlineTickedMessageManager.html">OnlineTickedMessageManager</a>
 <br>
 </td><td class="summaryTableCol"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/net/class-list.html');" href="com/whirled/contrib/simplegame/net/package-detail.html">com.whirled.contrib.simplegame.net</a></td><td class="summaryTableLastCol">
