--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/board/StaticTask.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/board/StaticTask.html
@@ -104,7 +104,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
-<a class="signatureLink" href="#StaticTask()">StaticTask</a>(ac:<a href="../game/ActorController.html">ActorController</a>, col:<a href="Collider.html">Collider</a>)</div>
+<a class="signatureLink" href="#StaticTask()">StaticTask</a>(cc:<a href="../game/CollisionController.html">CollisionController</a>, col:<a href="Collider.html">Collider</a>)</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">StaticTask</td>
 </tr>
@@ -222,10 +222,10 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>public function StaticTask(ac:<a href="../game/ActorController.html">ActorController</a>, col:<a href="Collider.html">Collider</a>)</code><span class="label">Parameters</span>
+<code>public function StaticTask(cc:<a href="../game/CollisionController.html">CollisionController</a>, col:<a href="Collider.html">Collider</a>)</code><span class="label">Parameters</span>
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
-<td width="20px"></td><td><code><span class="label">ac</span>:<a href="../game/ActorController.html">ActorController</a></code></td>
+<td width="20px"></td><td><code><span class="label">cc</span>:<a href="../game/CollisionController.html">CollisionController</a></code></td>
 </tr>
 <tr>
 <td class="paramSpacer">&nbsp;</td>
