--- a/pages/code/contrib/asdocs/package-list.html
+++ b/pages/code/contrib/asdocs/package-list.html
@@ -19,6 +19,11 @@
 </td>
 </tr>
 <tr>
+<td><a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/oneroom/class-list.html');" href="com/whirled/contrib/avrg/oneroom/package-detail.html">com.whirled.contrib.avrg.oneroom</a>
+<br>
+</td>
+</tr>
+<tr>
 <td><a onclick="javascript:loadClassListFrame('com/whirled/contrib/card/class-list.html');" href="com/whirled/contrib/card/package-detail.html">com.whirled.contrib.card</a>
 <br>
 </td>
