--- a/pages/code/contrib/asdocs/all-index-A.html
+++ b/pages/code/contrib/asdocs/all-index-A.html
@@ -187,6 +187,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("AÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/SimpleActorBounds.html#actorLD()">actorLD</a>(x1, y1, x2, y2, type) &mdash; Method in class com.whirled.contrib.platformer.board.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/SimpleActorBounds.html">SimpleActorBounds</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game/class-list.html');" href="com/whirled/contrib/platformer/game/GameController.html#_actorMap">_actorMap</a> &mdash; Property in class com.whirled.contrib.platformer.game.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game/class-list.html');" href="com/whirled/contrib/platformer/game/GameController.html">GameController</a></td>
 </tr>
 <tr>
@@ -218,6 +224,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("AÂ
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/ActorSpriteLayer.html">ActorSpriteLayer</a> &mdash; Class in package <a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/package-detail.html">com.whirled.contrib.platformer.display</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/SimpleActorBounds.html#actorUpdateLD()">actorUpdateLD</a>(line:<a href="com/whirled/contrib/platformer/board/LineData.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board./class-list.html');">com.whirled.contrib.platformer.board:LineData</a>, x1, y1, x2, y2) &mdash; Method in class com.whirled.contrib.platformer.board.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/SimpleActorBounds.html">SimpleActorBounds</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
