--- a/pages/code/contrib/asdocs/all-index-O.html
+++ b/pages/code/contrib/asdocs/all-index-O.html
@@ -204,6 +204,26 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("OÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/oneroom/class-list.html');" href="com/whirled/contrib/avrg/oneroom/OneRoomGameRoom.html">OneRoomGameRoom</a> &mdash; Class in package <a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/oneroom/class-list.html');" href="com/whirled/contrib/avrg/oneroom/package-detail.html">com.whirled.contrib.avrg.oneroom</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+ Room type superclass for games that take place in exactly one room.</td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/oneroom/class-list.html');" href="com/whirled/contrib/avrg/oneroom/OneRoomGameServer.html">OneRoomGameServer</a> &mdash; Class in package <a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/oneroom/class-list.html');" href="com/whirled/contrib/avrg/oneroom/package-detail.html">com.whirled.contrib.avrg.oneroom</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+ Server agent for games that take place in exactly one room.</td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/oneroom/class-list.html');" href="com/whirled/contrib/avrg/oneroom/OneRoomGameServer.html#OneRoomGameServer()">OneRoomGameServer</a>() &mdash; Constructor in class com.whirled.contrib.avrg.oneroom.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/oneroom/class-list.html');" href="com/whirled/contrib/avrg/oneroom/OneRoomGameServer.html">OneRoomGameServer</a></td>
+</tr>
+<tr>
+<td width="20"></td><td> Creates a new server agent for a game that takes place in exactly one room.</td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/resource/class-list.html');" href="com/whirled/contrib/simplegame/resource/ImageResource.html#onError()">onError</a>(e) &mdash; Method in class com.whirled.contrib.simplegame.resource.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/resource/class-list.html');" href="com/whirled/contrib/simplegame/resource/ImageResource.html">ImageResource</a></td>
 </tr>
 <tr>
