--- a/pages/code/contrib/asdocs/all-index-S.html
+++ b/pages/code/contrib/asdocs/all-index-S.html
@@ -566,6 +566,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("SÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/oneroom/class-list.html');" href="com/whirled/contrib/avrg/oneroom/OneRoomGameRoom.html#_server">_server</a> &mdash; Property in class com.whirled.contrib.avrg.oneroom.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/oneroom/class-list.html');" href="com/whirled/contrib/avrg/oneroom/OneRoomGameRoom.html">OneRoomGameRoom</a></td>
+</tr>
+<tr>
+<td width="20"></td><td> The agent that spawned this room.</td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/class-list.html');" href="com/whirled/contrib/UserCookie.html#set()">set</a>(name, ... rest, indices) &mdash; Method in class com.whirled.contrib.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/class-list.html');" href="com/whirled/contrib/UserCookie.html">UserCookie</a></td>
 </tr>
 <tr>
@@ -1104,6 +1110,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("SÂ
      Cancels all running timers, and disconnects the TimerManager from its parent, if it has one.</td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/oneroom/class-list.html');" href="com/whirled/contrib/avrg/oneroom/OneRoomGameRoom.html#shutdown()">shutdown</a>() &mdash; Method in class com.whirled.contrib.avrg.oneroom.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/oneroom/class-list.html');" href="com/whirled/contrib/avrg/oneroom/OneRoomGameRoom.html">OneRoomGameRoom</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+     Shuts down the game room.</td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/class-list.html');" href="com/whirled/contrib/simplegame/MainLoop.html#shutdown()">shutdown</a>() &mdash; Method in class com.whirled.contrib.simplegame.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/class-list.html');" href="com/whirled/contrib/simplegame/MainLoop.html">MainLoop</a></td>
 </tr>
 <tr>
@@ -1234,7 +1247,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("SÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/objects/class-list.html');" href="com/whirled/contrib/simplegame/objects/SimpleTimer.html#SimpleTimer()">SimpleTimer</a>(delay, callback, repeating, objectName) &mdash; Constructor in class com.whirled.contrib.simplegame.objects.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/objects/class-list.html');" href="com/whirled/contrib/simplegame/objects/SimpleTimer.html">SimpleTimer</a></td>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/objects/class-list.html');" href="com/whirled/contrib/simplegame/objects/SimpleTimer.html#SimpleTimer()">SimpleTimer</a>(delay, callback, repeating, timerName) &mdash; Constructor in class com.whirled.contrib.simplegame.objects.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/objects/class-list.html');" href="com/whirled/contrib/simplegame/objects/SimpleTimer.html">SimpleTimer</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
@@ -1653,7 +1666,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("SÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
-<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/StaticTask.html#StaticTask()">StaticTask</a>(ac:<a href="com/whirled/contrib/platformer/game/ActorController.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game./class-list.html');">com.whirled.contrib.platformer.game:ActorController</a>, col:<a href="com/whirled/contrib/platformer/board/Collider.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board./class-list.html');">com.whirled.contrib.platformer.board:Collider</a>) &mdash; Constructor in class com.whirled.contrib.platformer.board.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/StaticTask.html">StaticTask</a></td>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/StaticTask.html#StaticTask()">StaticTask</a>(cc:<a href="com/whirled/contrib/platformer/game/CollisionController.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game./class-list.html');">com.whirled.contrib.platformer.game:CollisionController</a>, col:<a href="com/whirled/contrib/platformer/board/Collider.html" onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board./class-list.html');">com.whirled.contrib.platformer.board:Collider</a>) &mdash; Constructor in class com.whirled.contrib.platformer.board.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/StaticTask.html">StaticTask</a></td>
 </tr>
 <tr>
 <td width="20"></td><td></td>
