--- a/pages/code/contrib/asdocs/com/whirled/contrib/EventHandlers.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/EventHandlers.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../print.css" type="text/css" media="print">
-<meta content="EventHandlers,com.whirled.contrib.EventHandlers,_eventHandlers,freeAllHandlers,registerEventListener,registerUnload,unregisterEventListener" name="keywords">
+<meta content="EventHandlers,com.whirled.contrib.EventHandlers,_eventHandlers,freeAllHandlers,registerEventListener,registerOneShotCallback,registerUnload,unregisterEventListener" name="keywords">
 <title>com.whirled.contrib.EventHandlers</title>
 </head>
 <body>
@@ -87,6 +87,14 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
+<a class="signatureLink" href="#registerOneShotCallback()">registerOneShotCallback</a>(dispatcher:IEventDispatcher, event:String, callback:Function):void</div>
+<div class="summaryTableDescription">[static]
+     Registers a zero-arg callback function that should be called once when the event fires.</div>
+</td><td class="summaryTableOwnerCol">EventHandlers</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
 <a class="signatureLink" href="#registerUnload()">registerUnload</a>(dispatcher:IEventDispatcher):void</div>
 <div class="summaryTableDescription">[static]
      Registers the freeAllHandlers() method to be called upon Event.UNLOAD on the supplied
@@ -163,6 +171,34 @@ showHideInherited();
 </tr>
 <tr>
 <td width="20px"></td><td><code><span class="label">listener</span>:Function</code></td>
+</tr>
+</table>
+</div>
+<a name="registerOneShotCallback()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">registerOneShotCallback</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public static function registerOneShotCallback(dispatcher:IEventDispatcher, event:String, callback:Function):void</code><p>
+     Registers a zero-arg callback function that should be called once when the event fires.
+     </p><span class="label">Parameters</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20px"></td><td><code><span class="label">dispatcher</span>:IEventDispatcher</code></td>
+</tr>
+<tr>
+<td class="paramSpacer">&nbsp;</td>
+</tr>
+<tr>
+<td width="20px"></td><td><code><span class="label">event</span>:String</code></td>
+</tr>
+<tr>
+<td class="paramSpacer">&nbsp;</td>
+</tr>
+<tr>
+<td width="20px"></td><td><code><span class="label">callback</span>:Function</code></td>
 </tr>
 </table>
 </div>
