--- a/pages/code/contrib/asdocs/com/whirled/contrib/TimerManager.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/TimerManager.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../print.css" type="text/css" media="print">
-<meta content="TimerManager,com.whirled.contrib.TimerManager,_children,_freeSlots,_parent,_timers,cancelAllTimers,cancelTimer,createTimer,runOnce,shutdown,stopTimer" name="keywords">
+<meta content="TimerManager,com.whirled.contrib.TimerManager,_children,_freeSlots,_parent,_timers,cancelAllTimers,cancelTimer,createTimer,runForever,runOnce,shutdown,stopTimer" name="keywords">
 <title>com.whirled.contrib.TimerManager</title>
 </head>
 <body>
@@ -108,6 +108,15 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 </div>
 <div class="summaryTableDescription">
      Creates, but doesn't run, a new ManagedTimer.</div>
+</td><td class="summaryTableOwnerCol">TimerManager</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#runForever()">runForever</a>(delay:Number, callback:Function):<a href="../contrib/ManagedTimer.html">ManagedTimer</a>
+</div>
+<div class="summaryTableDescription">
+     Creates and runs a timer that will run forever, or until canceled.</div>
 </td><td class="summaryTableOwnerCol">TimerManager</td>
 </tr>
 <tr class="">
@@ -269,6 +278,35 @@ showHideInherited();
 </tr>
 <tr>
 <td width="20px"></td><td><code><span class="label">completeCallback</span>:Function</code> (default = <code>null</code>)<code></code></td>
+</tr>
+</table>
+<p></p>
+<span class="label">Returns</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20"></td><td><code><a href="../contrib/ManagedTimer.html">ManagedTimer</a></code></td>
+</tr>
+</table>
+</div>
+<a name="runForever()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">runForever</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public function runForever(delay:Number, callback:Function):<a href="../contrib/ManagedTimer.html">ManagedTimer</a></code><p>
+     Creates and runs a timer that will run forever, or until canceled.
+     </p><span class="label">Parameters</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20px"></td><td><code><span class="label">delay</span>:Number</code></td>
+</tr>
+<tr>
+<td class="paramSpacer">&nbsp;</td>
+</tr>
+<tr>
+<td width="20px"></td><td><code><span class="label">callback</span>:Function</code></td>
 </tr>
 </table>
 <p></p>
