--- a/pages/code/contrib/asdocs/com/whirled/contrib/simplegame/objects/SimpleTimer.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/simplegame/objects/SimpleTimer.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../../print.css" type="text/css" media="print">
-<meta content="SimpleTimer,com.whirled.contrib.simplegame.objects.SimpleTimer,_name,_timeLeft,objectName,timeLeft" name="keywords">
+<meta content="SimpleTimer,com.whirled.contrib.simplegame.objects.SimpleTimer,_name,_timeLeft,objectName,timeLeft,getTimeLeft" name="keywords">
 <title>com.whirled.contrib.simplegame.objects.SimpleTimer</title>
 </head>
 <body>
@@ -156,7 +156,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
-<a class="signatureLink" href="#SimpleTimer()">SimpleTimer</a>(delay:Number, callback:Function = null, repeating:Boolean = false, objectName:String = null)</div>
+<a class="signatureLink" href="#SimpleTimer()">SimpleTimer</a>(delay:Number, callback:Function = null, repeating:Boolean = false, timerName:String = null)</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">SimpleTimer</td>
 </tr>
@@ -195,6 +195,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <div class="summaryTableDescription">
      Iterates over the groups that this object is a member of.</div>
 </td><td class="summaryTableOwnerCol"><a href="../SimObject.html">SimObject</a></td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#getTimeLeft()">getTimeLeft</a>(timerName:String):Number</div>
+<div class="summaryTableDescription">[static]</div>
+</td><td class="summaryTableOwnerCol">SimpleTimer</td>
 </tr>
 <tr class="hideInheritedMethod">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol">
@@ -353,7 +360,7 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>public function SimpleTimer(delay:Number, callback:Function = null, repeating:Boolean = false, objectName:String = null)</code><span class="label">Parameters</span>
+<code>public function SimpleTimer(delay:Number, callback:Function = null, repeating:Boolean = false, timerName:String = null)</code><span class="label">Parameters</span>
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
 <td width="20px"></td><td><code><span class="label">delay</span>:Number</code></td>
@@ -374,7 +381,30 @@ showHideInherited();
 <td class="paramSpacer">&nbsp;</td>
 </tr>
 <tr>
-<td width="20px"></td><td><code><span class="label">objectName</span>:String</code> (default = <code>null</code>)<code></code></td>
+<td width="20px"></td><td><code><span class="label">timerName</span>:String</code> (default = <code>null</code>)<code></code></td>
+</tr>
+</table>
+</div>
+<a name="methodDetail"></a>
+<div class="detailSectionHeader">Method detail</div>
+<a name="getTimeLeft()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">getTimeLeft</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public static function getTimeLeft(timerName:String):Number</code><span class="label">Parameters</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20px"></td><td><code><span class="label">timerName</span>:String</code></td>
+</tr>
+</table>
+<p></p>
+<span class="label">Returns</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20"></td><td><code>Number</code></td>
 </tr>
 </table>
 </div>
