--- a/pages/code/contrib/asdocs/package-summary.html
+++ b/pages/code/contrib/asdocs/package-summary.html
@@ -39,60 +39,63 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Al
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/class-list.html');" href="com/whirled/contrib/package-detail.html">com.whirled.contrib</a></td><td class="summaryTableLastCol">Contains an archive of useful tools for game development, contributed by various authors and users of the Whirled SDK. See whirled/contrib/README.txt in the SDK for further information.</td>
 </tr>
 <tr class="prow0">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/oneroom/class-list.html');" href="com/whirled/contrib/avrg/oneroom/package-detail.html">com.whirled.contrib.avrg.oneroom</a></td><td class="summaryTableLastCol">&nbsp;</td>
+</tr>
+<tr class="prow1">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/card/class-list.html');" href="com/whirled/contrib/card/package-detail.html">com.whirled.contrib.card</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow1">
+<tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/card/graphics/class-list.html');" href="com/whirled/contrib/card/graphics/package-detail.html">com.whirled.contrib.card.graphics</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow0">
+<tr class="prow1">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/card/trick/class-list.html');" href="com/whirled/contrib/card/trick/package-detail.html">com.whirled.contrib.card.trick</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow1">
+<tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/display/class-list.html');" href="com/whirled/contrib/display/package-detail.html">com.whirled.contrib.display</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow0">
+<tr class="prow1">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/class-list.html');" href="com/whirled/contrib/platformer/package-detail.html">com.whirled.contrib.platformer</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow1">
+<tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/board/class-list.html');" href="com/whirled/contrib/platformer/board/package-detail.html">com.whirled.contrib.platformer.board</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow0">
+<tr class="prow1">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/display/class-list.html');" href="com/whirled/contrib/platformer/display/package-detail.html">com.whirled.contrib.platformer.display</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow1">
+<tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/editor/class-list.html');" href="com/whirled/contrib/platformer/editor/package-detail.html">com.whirled.contrib.platformer.editor</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow0">
+<tr class="prow1">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/game/class-list.html');" href="com/whirled/contrib/platformer/game/package-detail.html">com.whirled.contrib.platformer.game</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow1">
+<tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/piece/class-list.html');" href="com/whirled/contrib/platformer/piece/package-detail.html">com.whirled.contrib.platformer.piece</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow0">
+<tr class="prow1">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/util/class-list.html');" href="com/whirled/contrib/platformer/util/package-detail.html">com.whirled.contrib.platformer.util</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow1">
+<tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/class-list.html');" href="com/whirled/contrib/simplegame/package-detail.html">com.whirled.contrib.simplegame</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow0">
+<tr class="prow1">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/audio/class-list.html');" href="com/whirled/contrib/simplegame/audio/package-detail.html">com.whirled.contrib.simplegame.audio</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow1">
+<tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/components/class-list.html');" href="com/whirled/contrib/simplegame/components/package-detail.html">com.whirled.contrib.simplegame.components</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow0">
+<tr class="prow1">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/net/class-list.html');" href="com/whirled/contrib/simplegame/net/package-detail.html">com.whirled.contrib.simplegame.net</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow1">
+<tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/objects/class-list.html');" href="com/whirled/contrib/simplegame/objects/package-detail.html">com.whirled.contrib.simplegame.objects</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow0">
+<tr class="prow1">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/resource/class-list.html');" href="com/whirled/contrib/simplegame/resource/package-detail.html">com.whirled.contrib.simplegame.resource</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow1">
+<tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/tasks/class-list.html');" href="com/whirled/contrib/simplegame/tasks/package-detail.html">com.whirled.contrib.simplegame.tasks</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
-<tr class="prow0">
+<tr class="prow1">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/util/class-list.html');" href="com/whirled/contrib/simplegame/util/package-detail.html">com.whirled.contrib.simplegame.util</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
 </table>
